--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,13 +4,13 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Home"
+  name = "About me"
   url = "#about"
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Interests"
+  url = "#interests"
   weight = 20
 
 [[main]]
@@ -21,16 +21,26 @@
 [[main]]
   name = "Publications"
   url = "#featured"
+  weight = 50
+
+#[[main]]
+#  name = "Publications"
+#  url = "#featured"
+#  weight = 30
+
+[[main]]
+  name = "Blog Posts"
+  url = "#posts"
   weight = 40
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
+#[[main]]
+ #   name = "CV"
+  #  url = "static/files/cv.pdf"
+   # weight = 70
