--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -9,7 +9,7 @@ title = "Kelly Ann Heilman, PhD"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "/"
+baseurl = "https://Kah5.github.io//"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
