--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,10 +18,10 @@
   url = "#projects"
   weight = 30
 
-[[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 50
+#[[main]]
+#  name = "Publications"
+#  url = "#featured"
+#  weight = 50
 
 #[[main]]
 #  name = "Publications"
