updating website with recent talks

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -34,6 +34,11 @@
   weight = 50
 
 [[main]]
+name = "Recent talks"
+url = "#talks"
+weight = 60
+
+[[main]]
   name = "Contact"
   url = "#contact"
   weight = 70
