editing github pages yaml

--- a/.github/workflows/GitHubPages.yml
+++ b/.github/workflows/GitHubPages.yml
@@ -29,6 +29,6 @@ jobs:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           publish_dir: ./public
           publish_branch: master  # deploying branch
-          cname: academic-pages-demo.lakemper.eu
+          cname: https://kah5.github.io/
           allow_empty_commit: true
-          external_repository: sloede/academic-pages-demo
+          external_repository: Kah5/Kah5.github.io
